@@ -1189,7 +1189,7 @@ void Rasterizer::Draw_noAlpha_sp_Body_0(RasterizerNfo& rnfo)
     // xo is the offset (usually negative) we have moved into the image
     // So if we have passed the switchpoint (?) switch to another colour
     // (So switchpts stores both colours *and* coordinates?)
-    int gran = std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w);
+    int gran = std::max(0, std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w));
     int color2 = rnfo.sw[2];
 
     while (h--) {
@@ -1211,7 +1211,7 @@ void Rasterizer::Draw_noAlpha_sp_noBody_0(RasterizerNfo& rnfo)
     byte* srcBody = rnfo.srcBody;
     byte* srcBorder = rnfo.srcBorder;
     DWORD* dst = rnfo.dst;
-    int gran = std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w);
+    int gran = std::max(0, std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w));
     int color2 = rnfo.sw[2];
 
     while (h--) {
@@ -1258,7 +1258,7 @@ void Rasterizer::Draw_Alpha_spFF_noBody_0(RasterizerNfo& rnfo)
     byte* srcBody = rnfo.srcBody;
     byte* srcBorder = rnfo.srcBorder;
     DWORD* dst = rnfo.dst;
-    int gran = std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w);
+    int gran = std::max(0, std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w));
     int color2 = rnfo.sw[2];
 
     while (h--) {
@@ -1301,7 +1301,7 @@ void Rasterizer::Draw_Alpha_sp_noBody_0(RasterizerNfo& rnfo)
     byte* srcBody = rnfo.srcBody;
     byte* srcBorder = rnfo.srcBorder;
     DWORD* dst = rnfo.dst;
-    int gran = std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w);
+    int gran = std::max(0, std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w));
     int color2 = rnfo.sw[2];
 
     while (h--) {
@@ -1378,7 +1378,7 @@ void Rasterizer::Draw_noAlpha_sp_Body_sse2(RasterizerNfo& rnfo)
     // xo is the offset (usually negative) we have moved into the image
     // So if we have passed the switchpoint (?) switch to another colour
     // (So switchpts stores both colours *and* coordinates?)
-    int gran = std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w);
+    int gran = std::max(0, std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w));
     int end_gran = ((gran - 1) / 8) * 8;
     int end_w = gran + ((rnfo.w - gran - 1) / 8) * 8;
     int color2 = rnfo.sw[2];
@@ -1408,7 +1408,7 @@ void Rasterizer::Draw_noAlpha_sp_noBody_sse2(RasterizerNfo& rnfo)
     byte* srcBody = rnfo.srcBody;
     byte* srcBorder = rnfo.srcBorder;
     DWORD* dst = rnfo.dst;
-    int gran = std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w);
+    int gran = std::max(0, std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w));
     int color2 = rnfo.sw[2];
 
     while (h--) {
@@ -1474,7 +1474,7 @@ void Rasterizer::Draw_Alpha_sp_Body_sse2(RasterizerNfo& rnfo)
     int color = rnfo.color;
     byte* s = rnfo.s;
     DWORD* dst = rnfo.dst;
-    int gran = std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w);
+    int gran = std::max(0, std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w));
     int color2 = rnfo.sw[2];
 
     while (h--) {
@@ -1498,7 +1498,7 @@ void Rasterizer::Draw_Alpha_sp_noBody_sse2(RasterizerNfo& rnfo)
     byte* srcBody = rnfo.srcBody;
     byte* srcBorder = rnfo.srcBorder;
     DWORD* dst = rnfo.dst;
-    int gran = std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w);
+    int gran = std::max(0, std::min((int)rnfo.sw[3] - rnfo.xo, rnfo.w));
     int color2 = rnfo.sw[2];
     UNREFERENCED_PARAMETER(color2);
 
